terraform/main.tf
terraform {
  required_version = ">= 1.3.0"
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 5.0"
    }
    kubernetes = {
      source  = "hashicorp/kubernetes"
      version = "~> 2.25"
    }
  }
}

provider "aws" {
  region  = var.aws_region
  profile = "boardgame-dev"
}

data "aws_eks_cluster" "eks" {
  name       = module.eks.cluster_name
  depends_on = [module.eks]
}

data "aws_eks_cluster_auth" "eks" {
  name       = module.eks.cluster_name
  depends_on = [module.eks]
}

provider "kubernetes" {
  host                   = data.aws_eks_cluster.eks.endpoint
  cluster_ca_certificate = base64decode(data.aws_eks_cluster.eks.certificate_authority[0].data)
  token                  = data.aws_eks_cluster_auth.eks.token
  load_config_file       = false
}

# Allow HTTP-style access on port 8080 from anywhere to the Load Balancer SG
resource "aws_security_group_rule" "lb_public_ingress_8080" {
  type              = "ingress"
  from_port         = 8080
  to_port           = 8080
  protocol          = "tcp"
  security_group_id = "sg-068b519bad73771fa"
  cidr_blocks       = ["0.0.0.0/0"]
  description       = "Allow public access to Load Balancer on 8080"
}

resource "aws_security_group_rule" "lb_public_ingress_https" {
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  security_group_id = "sg-068b519bad73771fa"
  cidr_blocks       = ["0.0.0.0/0"]
  description       = "Allow public HTTPS access to Load Balancer"
}
